syntax = "proto3";

package simpleguide;

option go_package = "grpc/proto";

message request {
    int64 id = 1;
    int64 port = 2;
}

message responsMessage {
    string respond = 1;
    int64 id = 2;
    int64 vectorclock = 3;
}

message chatMessage {
  int64 id = 1;
  string message = 2;
  int64 vectorclock = 3;
}

message errorMessage {
  string message = 1;
}

message logOffMessage {
  int64 id = 1;
  int64 vectorclock = 2;
}

service registerClient {
    rpc registerToServer(request) returns (stream responsMessage); //Server side streaming
    rpc populateChatMessage(chatMessage) returns (errorMessage);
    rpc logOffServer(logOffMessage) returns (errorMessage);
}